frontend/tests/cases/negative/unique/cloneNonCloneable.gr.output
Type checking failed: 
Type constraint error: frontend/tests/cases/negative/unique/cloneNonCloneable.gr:1:1:
Constraint `Cloneable Int` does not hold or is not provided by the type constraint assumptions here.